--- a/Event-Based-Contagion-Forcasting.ipynb
+++ b/Event-Based-Contagion-Forcasting.ipynb
@@ -28,8 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Is there a Trump effect?\n",
-    "The following analysis seeks to determine if there is a correlation between the number of Covid-19 cases and the number of attributed deaths in relation to the timing and location of Trump's 2020 campaign rallies for U.S. President.  The analysis assumes that the covid statistics will be captured for each city in which a rally occured. The rally schedule ('https://ballotpedia.org/Donald_Trump_presidential_campaign,_2020#Campaign_rallies') is listed by city and New York Times Covid-19 data ('https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-counties.csv') is by county, therefore the table is joined first by looking up the county for each city, and getting the fips coded geographic boundaries:"
+    "#### Event-based Contagion Forecasting\n",
+    "The following analysis seeks to determine if there is a correlation between the information on Covid-19, number of Covid-19 cases and the number of attributed deaths in relation to the timing and location of Trump's 2020 campaign rallies for U.S. President.  The analysis assumes that the covid statistics will be captured for each city in which a rally occured. The rally schedule ('https://ballotpedia.org/Donald_Trump_presidential_campaign,_2020#Campaign_rallies') is listed by city and New York Times Covid-19 data ('https://raw.githubusercontent.com/nytimes/covid-19-data/master/us-counties.csv') is by county, therefore the table is joined first by looking up the county for each city, and getting the fips coded geographic boundaries:"
    ]
   },
   {
